--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <head>
   <meta charset="utf-8">
   <title>To Do List</title>
